--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "mongoose": "^8.1.0",
-    "zod": "^3.22.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.10.1",
+    "zod": "^3.24.2"
   }
 }
